# warped-drive

./: .gitignore  Cargo.toml  CoreStorage.sln  LICENSE.md  README.md  WarpedDrive.sln
.cargo/: config
C#/: WarpedDrive.sln
C#/lib/WarpedDrive/: Block.cs  Class1.cs  Debug.cs  Device.cs  NTFS.cs  Stream.cs  Volume.cs
C#/src/WarpedDrive.Main/: Program.cs  WarpedDrive.Main.csproj
C++/src/WarpedDrive/: AES.h  Aligned.cpp  Aligned.h  CoreStorage.cpp  CoreStorage.h  Debug.h  KEK.h  NTFS.h  WarpedDrive.vcxproj  plist.h  stdafx.cpp
CoreStorage/: CoreStorage.vcxproj  CoreStorage.vcxproj.filters  KEK.cpp  ReadMe.txt  stdafx.cpp
Rust/: Cargo.toml
Rust/src/: lib.rs
Rust/src/device/: mod.rs  unix.rs  windows.rs
Rust/src/fs/: fat.rs  mod.rs
src/: device.rs  lib.rs  main.rs  utils.rs
src/WarpedDrive/: AES.cpp  Debug.cpp  HMAC.cpp  HMAC.h  Hash.h  Main.cpp  NTFS.cpp  PBKDF.cpp  PBKDF.h  Password.cpp  Password.h  SHA.cpp  SHA.h  base64.cpp  base64.h  plist.cpp  stdafx.h
src/device/: mod.rs  unix_um.rs  windows_km.rs
src/fs/: fat.rs  mod.rs  ntfs.rs
