[package]
name = "tardis"
version = "0.1.0"
authors = ["Malcolm Robert <github@mxii.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "ioapiset", "winerror", "winioctl"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.9" }